# screen_inu

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  README_ja.md  README_ko.md  README_zh-CN.md  README_zh-TW.md  all_runs.json  ci_job_fail_log_v4.txt  ci_jobs.json  ci_log_new.txt  current_runs.json  e2e_ci_log_new.txt  e2e_failure_log.txt  e2e_failure_log_v2.txt  e2e_failure_log_v3.txt  e2e_failure_log_v4.txt  e2e_failure_log_v4_failed.txt  e2e_job_fail_v2_log.txt  e2e_job_fail_v4_log.txt  e2e_job_full_log.txt  e2e_job_latest_log.txt  e2e_jobs.json  e2e_latest_run.json  e2e_log.txt  e2e_log_new.txt  e2e_success_log.txt  full_log.txt  full_log_2.txt  full_log_3.txt  full_log_4.txt  jobs_ci.json  jobs_info.json  jobs_v021.json  latest_ci_log.txt  latest_main_log.txt  (+14 more)
.agent/workflows/: e2e-testing.md
.github/workflows/: ci.yml  e2e.yml  publish-homebrew.yml  publish-winget.yml  release.yml
app/: .gitignore  error.txt  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
app/e2e/: package-lock.json  package.json  wdio.conf.js
app/playwright-report/: index.html
app/src-tauri/: Cargo.toml  build.rs  build_errors.txt  check_error.txt  tauri.conf.json  test_debug.txt  test_error.txt  test_error_v2.txt  test_output.txt
app/src-tauri/capabilities/: default.json  desktop.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  model_manager.rs  ocr.rs  sync.rs  translator.rs  tray.rs
ci_logs/: 0_test.txt
docs/: init.md  playwright_testing.md  research_supplement_2025.md
(+50 files in other folders)
